--- a/Sicsoft.Checkin.Web/Pages/Usuarios/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Usuarios/Editar.cshtml
@@ -364,6 +364,12 @@
                                 <input type="text" id="Norma" class="form-control form-control-lg" asp-for="Input.NormaReparto" required placeholder="Norma de Reparto">
                             </div>
                         </div>
+                        <div class="col-md-4 pl-1">
+                            <div class="form-group">
+                                <label for="pin">PIN</label>
+                                <input type="text" id="pin" class="form-control form-control-lg" asp-for="Input.PIN" required placeholder="XXXX" maxlength="4">
+                            </div>
+                        </div>
                     </div>
 
                     <div class="row">
